--- a/tracks.yaml
+++ b/tracks.yaml
@@ -274,4 +274,5 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/facontidavide/PlotJuggler.git
-    version: :{auto}
+    version: 3.5.1
+    version_saved: :{auto}
