--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/plotjuggler
-	previous = 
-	base = a3ee3a75
+	previous = a3ee3a75
+	base = 11398ba2
 	trim = 
 	trimbase = 
