--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/plotjuggler
-	previous = 
-	base = f56451b1
+	previous = 92acef43
+	base = dec4e0a7
 	trim = 
 	trimbase = 
