--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/plotjuggler
-	previous = 
-	base = 8cf95a34
+	previous = 8cf95a34
+	base = b252dcd9
 	trim = 
 	trimbase = 
