--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/plotjuggler
-	previous = 
-	base = daac9629
+	previous = daac9629
+	base = 0224d1fb
 	trim = 
 	trimbase = 
