--- a/tracks.yaml
+++ b/tracks.yaml
@@ -274,5 +274,4 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/facontidavide/PlotJuggler.git
-    version: 3.5.1
-    version_saved: :{auto}
+    version: :{auto}
