--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = debian/rolling/plotjuggler
+	parent = debian/iron/plotjuggler
 	previous = 92acef43
 	base = 271c8bb7
 	trim = 
