--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = debian/rolling/plotjuggler
+	parent = debian/iron/plotjuggler
 	previous = a3ee3a75
 	base = 92aacdcf
 	trim = 
