--- a/tracks.yaml
+++ b/tracks.yaml
@@ -150,7 +150,8 @@ tracks:
     ros_distro: iron
     vcs_type: git
     vcs_uri: https://github.com/facontidavide/PlotJuggler.git
-    version: :{auto}
+    version: 3.5.1
+    version_saved: :{auto}
   jade:
     actions:
     - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
