--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"3.5.1-3": ["Thu Apr 20 2023", "Davide Faconti", "davide.faconti@gmail.com"], "3.5.1-2": ["Tue Mar 21 2023", "Davide Faconti", "davide.faconti@gmail.com"]}
+{"3.7.1-1": ["Tue May 23 2023", "Davide Faconti", "davide.faconti@gmail.com"], "3.5.1-3": ["Thu Apr 20 2023", "Davide Faconti", "davide.faconti@gmail.com"], "3.5.1-2": ["Tue Mar 21 2023", "Davide Faconti", "davide.faconti@gmail.com"]}
