--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
-cmake_minimum_required(VERSION 3.10.2)
+# cmake version constrained by Ubuntu 20.04
+cmake_minimum_required(VERSION 3.16.3)
 
-PROJECT(plotjuggler LANGUAGES C CXX VERSION 3.8.9)
+PROJECT(plotjuggler LANGUAGES C CXX VERSION 3.8.10)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
