--- a/plotjuggler_plugins/DataStreamZMQ/CMakeLists.txt
+++ b/plotjuggler_plugins/DataStreamZMQ/CMakeLists.txt
@@ -1,36 +1,31 @@
 if(BUILDING_WITH_VCPKG)
     message(STATUS "Finding ZeroMQ with vcpkg")
-    set(ZeroMQ_LIBRARIES libzmq libzmq-static)
 elseif(BUILDING_WITH_CONAN)
     message(STATUS "Finding ZeroMQ with conan")
-    set(ZeroMQ_LIBRARIES libzmq-static)
 else()
     message(STATUS "Finding ZeroMQ without package managers")
-    list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/")
+    set(ZeroMQ_LIBS ${ZeroMQ_LIBRARIES})
 endif()
 
 find_package(ZeroMQ QUIET)
 
 if(ZeroMQ_FOUND)
-
     message(STATUS "[ZeroMQ] found")
-
-    include_directories(../ ${ZeroMQ_INCLUDE_DIR})
 
     add_definitions(${QT_DEFINITIONS})
     add_definitions(-DQT_PLUGIN)
 
     QT5_WRAP_UI ( UI_SRC  datastream_zmq.ui  )
 
-    SET( SRC datastream_zmq.cpp )
+    add_library(DataStreamZMQ SHARED datastream_zmq.cpp ${UI_SRC}  )
 
-    add_library(DataStreamZMQ SHARED ${SRC} ${UI_SRC}  )
+    target_link_libraries(DataStreamZMQ ${Qt5Widgets_LIBRARIES} plotjuggler_base)
 
-    target_link_libraries(DataStreamZMQ
-        ${Qt5Widgets_LIBRARIES}
-        plotjuggler_base
-        ${ZeroMQ_LIBRARIES}
-        )
+    if(BUILDING_WITH_VCPKG OR BUILDING_WITH_CONAN)
+        target_link_libraries(DataStreamZMQ libzmq-static)
+    else()
+        target_link_libraries(DataStreamZMQ ${ZeroMQ_LIBRARIES})
+    endif()
 
     install(TARGETS DataStreamZMQ DESTINATION ${PJ_PLUGIN_INSTALL_DIRECTORY}  )
 else()
