--- a/plotjuggler_plugins/DataLoadMCAP/CMakeLists.txt
+++ b/plotjuggler_plugins/DataLoadMCAP/CMakeLists.txt
@@ -1,43 +1,20 @@
+add_definitions(${QT_DEFINITIONS})
+add_definitions(-DQT_PLUGIN)
 
-if(BUILDING_WITH_CONAN)
+QT5_WRAP_UI ( UI_SRC  dialog_mcap.ui  )
 
-    find_package(zstd CONFIG REQUIRED)
-    set(Zstd_LIBRARIES zstd::libzstd_static)
-    set(Zstd_FOUND ON)
+add_library(DataLoadMCAP SHARED
+    mcap.cpp
+    dataload_mcap.cpp
+    dialog_mcap.cpp
+    ${UI_SRC}  )
 
-else()
+target_link_libraries(DataLoadMCAP
+    ${Qt5Widgets_LIBRARIES}
+    ${Qt5Xml_LIBRARIES}
+    libzstd_static
+    lz4_static
+    plotjuggler_base )
 
-    list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/")
-    find_package(Zstd QUIET)
+install(TARGETS DataLoadMCAP DESTINATION ${PJ_PLUGIN_INSTALL_DIRECTORY}  )
 
-endif()
-###########################################
-
-if(Zstd_FOUND)
-
-    include_directories( ${Zstd_INCLUDE_DIRS} )
-
-    add_definitions(${QT_DEFINITIONS})
-    add_definitions(-DQT_PLUGIN)
-
-    QT5_WRAP_UI ( UI_SRC  dialog_mcap.ui  )
-
-    SET( SRC
-        mcap.cpp
-        dataload_mcap.cpp
-        dialog_mcap.cpp
-        )
-
-    add_library(DataLoadMCAP SHARED ${SRC} ${UI_SRC}  )
-    target_link_libraries(DataLoadMCAP
-        ${Qt5Widgets_LIBRARIES}
-        ${Qt5Xml_LIBRARIES}
-        ${Zstd_LIBRARIES}
-        lz4_static
-        plotjuggler_base )
-
-    install(TARGETS DataLoadMCAP DESTINATION ${PJ_PLUGIN_INSTALL_DIRECTORY}  )
-
-else()
-    message("MCAP dependencies (Zstd) not found")
-endif()
