--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/plotjuggler
-	previous = 
-	base = 24a4bc52
+	previous = 24a4bc52
+	base = 7896e24a
 	trim = 
 	trimbase = 
