--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/plotjuggler
-	previous = 
-	base = c8adcc1c
+	previous = c8adcc1c
+	base = 4f66e712
 	trim = 
 	trimbase = 
