--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/plotjuggler
-	previous = 
-	base = 0ab08815
+	previous = 0ab08815
+	base = c15f751b
 	trim = 
 	trimbase = 
