--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/plotjuggler
-	previous = 
-	base = 1d2596a3
+	previous = 1d2596a3
+	base = a739d581
 	trim = 
 	trimbase = 
