--- a/tracks.yaml
+++ b/tracks.yaml
@@ -300,5 +300,4 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/facontidavide/PlotJuggler.git
-    version: 3.9.0
-    version_saved: :{auto}
+    version: :{auto}
