--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"3.9.0-2": ["Wed Mar 06 2024", "Davide Faconti", "davide.faconti@gmail.com"]}
+{"3.9.0-3": ["Fri Apr 19 2024", "Davide Faconti", "davide.faconti@gmail.com"], "3.9.0-2": ["Wed Mar 06 2024", "Davide Faconti", "davide.faconti@gmail.com"]}
