--- a/tracks.yaml
+++ b/tracks.yaml
@@ -200,8 +200,7 @@ tracks:
     ros_distro: jazzy
     vcs_type: git
     vcs_uri: https://github.com/facontidavide/PlotJuggler.git
-    version: 3.9.0
-    version_saved: :{auto}
+    version: :{auto}
   kinetic:
     actions:
     - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
