--- a/tracks.yaml
+++ b/tracks.yaml
@@ -226,7 +226,8 @@ tracks:
     ros_distro: kilted
     vcs_type: git
     vcs_uri: https://github.com/facontidavide/PlotJuggler.git
-    version: :{auto}
+    version: 3.9.2
+    version_saved: :{auto}
   kinetic:
     actions:
     - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
