--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [main]
   pull_request:
-    types: [opened, synchronize, closed]
+    types: [opened, synchronize]
 jobs:
   pre-commit:
     runs-on: ubuntu-latest
