--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="3">
     <name>plotjuggler</name>
-    <version>3.10.1</version>
+    <version>3.10.3</version>
     <description>PlotJuggler: juggle with data</description>
 
     <maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>
@@ -11,10 +11,15 @@
 
     <author email="davide.faconti@gmail.com">Davide Faconti</author>
 
-    <buildtool_depend>ament_cmake</buildtool_depend>
-    <depend>ament_index_cpp</depend>
-    <depend>rclcpp</depend>
-    <depend>fastcdr</depend>
+    <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
+    <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
+
+    <depend  condition="$ROS_VERSION == 1">roslib</depend>
+    <depend  condition="$ROS_VERSION == 1">roscpp</depend>
+
+    <depend  condition="$ROS_VERSION == 2">ament_index_cpp</depend>
+    <depend  condition="$ROS_VERSION == 2">rclcpp</depend>
+    <depend  condition="$ROS_VERSION == 2">fastcdr</depend>
 
     <!-- Qt dependancies -->
     <depend>qtbase5-dev</depend>
@@ -26,13 +31,18 @@
     <!-- needed for backward_cpp -->
     <depend>binutils</depend>
 
+    <!-- general dependencies -->
     <depend>boost</depend>
     <depend>libzmq3-dev</depend>
-
+    <depend>lz4</depend>
+    <depend>libzstd-dev</depend>
     <depend>protobuf-dev</depend>
+    <depend>lua-dev</depend>
+    <depend>mosquittopp-dev</depend>
 
     <!-- The export tag contains other, unspecified, tags -->
     <export>
-        <build_type>ament_cmake</build_type>
+        <build_type condition="$ROS_VERSION == 1">catkin</build_type>
+        <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
     </export>
 </package>
