--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="3">
     <name>plotjuggler</name>
-    <version>3.10.3</version>
+    <version>3.10.4</version>
     <description>PlotJuggler: juggle with data</description>
 
     <maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>
@@ -21,7 +21,7 @@
     <depend  condition="$ROS_VERSION == 2">rclcpp</depend>
     <depend  condition="$ROS_VERSION == 2">fastcdr</depend>
 
-    <!-- Qt dependancies -->
+    <!-- Qt dependencies -->
     <depend>qtbase5-dev</depend>
     <depend>libqt5-svg-dev</depend>
     <depend>libqt5-websockets-dev</depend>
