--- a/plotjuggler_plugins/ToolboxLuaEditor/CMakeLists.txt
+++ b/plotjuggler_plugins/ToolboxLuaEditor/CMakeLists.txt
@@ -20,8 +20,8 @@ target_link_libraries(ToolboxLuaEditor
     plotjuggler_base
     plotjuggler_qwt
     QCodeEditor
-    Lua::Lua
-    sol2
+    lua::lua
+    sol2::sol2
     )
 
 install(TARGETS ToolboxLuaEditor DESTINATION ${PJ_PLUGIN_INSTALL_DIRECTORY}  )
