--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="3">
     <name>plotjuggler</name>
-    <version>3.10.4</version>
+    <version>3.10.5</version>
     <description>PlotJuggler: juggle with data</description>
 
     <maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>
@@ -39,6 +39,7 @@
     <depend>protobuf-dev</depend>
     <depend>lua-dev</depend>
     <depend>mosquittopp-dev</depend>
+    <depend>nlohmann-json-dev</depend>
 
     <!-- The export tag contains other, unspecified, tags -->
     <export>
