Rebase from 'upstream'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.10.2)
+cmake_minimum_required(VERSION 3.16)
 
-PROJECT(plotjuggler LANGUAGES C CXX VERSION 3.10.3)
+PROJECT(plotjuggler LANGUAGES C CXX VERSION 3.10.5)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -19,8 +19,8 @@ add_definitions(
 #add_definitions( -DPJ_DEFAULT_ARGS="${PJ_DEFAULT_ARGS}")
 
 option(ENABLE_ASAN "Enable Address Sanitizer" OFF)
-option(BASE_AS_SHARED "Build the base library as a shared libary" OFF)
-option(BUILDING_WITH_CONAN "Using Conan for depenencies" OFF)
+option(BASE_AS_SHARED "Build the base library as a shared library" OFF)
+option(BUILDING_WITH_CONAN "Using Conan for dependencies" OFF)
 
 IF (NOT WIN32 AND ENABLE_ASAN)
   set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-omit-frame-pointer -fsanitize=address")
@@ -154,13 +154,27 @@ include_directories(
 
 include(FetchContent)
 include(cmake/CPM.cmake)
-include(cmake/find_or_download_dependencies.cmake)
 
-find_or_download_dependencies()
+include(cmake/find_or_download_lua.cmake)
+find_or_download_lua()
 
-add_subdirectory( 3rdparty )
+include(cmake/find_or_download_data_tamer.cmake)
+find_or_download_data_tamer()
 
+include(cmake/find_or_download_json.cmake)
+find_or_download_json()
 
+include(cmake/find_or_download_fastcdr.cmake)
+find_or_download_fastcdr()
+
+add_subdirectory( 3rdparty/qwt/src )
+add_subdirectory( 3rdparty/QCodeEditor )
+add_subdirectory( 3rdparty/color_widgets )
+add_subdirectory( 3rdparty/Qt-Advanced-Docking )
+
+if (NOT WIN32)
+  add_subdirectory( 3rdparty/backward-cpp )
+endif()
 
 #########################  BASE library  ####################################
 
@@ -202,8 +216,8 @@ target_link_libraries(plotjuggler_base
     PUBLIC
         plotjuggler_qwt
     PRIVATE
-        Lua::Lua
-        sol2
+        lua::lua
+        sol2::sol2
     )
 
 target_include_directories(plotjuggler_base
@@ -234,7 +248,6 @@ elseif(COMPILING_WITH_AMENT)
         export_plotjuggler_qwt
         HAS_LIBRARY_TARGET)
     ament_package()
-
 else()
 
     set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
@@ -252,12 +265,12 @@ install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/PlotJuggler.desktop
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/plotjuggler.svg
         DESTINATION ${DESKTOP_ICON_DIR}  )
 
-######################## Main App, Libraries and Plugins ###################################
+# ######################## Main App, Libraries and Plugins ###################################
 
 add_subdirectory( plotjuggler_app )
 add_subdirectory( plotjuggler_plugins)
 
-# Install targets
+# # Install targets
 
 install(
      TARGETS
