Imported upstream version '3.10.7' of 'upstream'

--- a/plotjuggler_plugins/DataLoadMCAP/CMakeLists.txt
+++ b/plotjuggler_plugins/DataLoadMCAP/CMakeLists.txt
@@ -9,23 +9,35 @@ find_or_download_lz4()
 include(${PROJECT_SOURCE_DIR}/cmake/find_or_download_zstd.cmake)
 find_or_download_zstd()
 
-if(NOT TARGET mcap)
-    ### mcap ###
-    CPMAddPackage(
-        NAME mcap
-        GITHUB_REPOSITORY foxglove/mcap
-        GIT_TAG releases/cpp/v2.0.0
-        DOWNLOAD_ONLY YES
-    )
-    # mcap has no CMake support, so we create our own target
-    add_library(mcap INTERFACE)
-    target_include_directories(mcap INTERFACE "${mcap_SOURCE_DIR}/cpp/mcap/include")
- endif()
+find_package(mcap_vendor QUIET)
+
+if(mcap_vendor_FOUND)
+    message(STATUS "Found mcap_vendor: ${mcap_vendor_VERSION}")
+    add_library(mcap::mcap ALIAS mcap_vendor::mcap)
+else()
+    message(STATUS "mcap_vendor not found. Will be downloaded with CPM.")
+    if(NOT TARGET mcap::mcap)
+        ### mcap ###
+        CPMAddPackage(
+            NAME mcap
+            GITHUB_REPOSITORY foxglove/mcap
+            GIT_TAG releases/cpp/v1.3.0
+            DOWNLOAD_ONLY YES
+        )
+        # mcap has no CMake support, so we create our own target
+        add_library(mcap_lib STATIC mcap.cpp)
+        target_include_directories(mcap_lib
+             PUBLIC $<BUILD_INTERFACE:${mcap_SOURCE_DIR}/cpp/mcap/include>
+        )
+        add_library(mcap::mcap ALIAS mcap_lib)
+    endif()
+endif()
+
+
 ########################################
 
 
 add_library(DataLoadMCAP SHARED
-    mcap.cpp
     dataload_mcap.cpp
     dialog_mcap.cpp
     ${UI_SRC}  )
@@ -37,7 +49,8 @@ target_link_libraries(DataLoadMCAP PRIVATE
         plotjuggler_base
         lz4::lz4
         zstd::zstd
-        mcap
+        mcap::mcap
+
     )
 
 install(TARGETS DataLoadMCAP DESTINATION ${PJ_PLUGIN_INSTALL_DIRECTORY}  )
