--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 
-PROJECT(plotjuggler LANGUAGES C CXX VERSION 3.10.7)
+PROJECT(plotjuggler LANGUAGES C CXX VERSION 3.10.8)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -298,6 +298,7 @@ if(NOT COMPILING_WITH_AMENT AND NOT COMPILING_WITH_CATKIN)
     install(
       EXPORT ${PROJECT_NAME}Targets
       FILE ${PROJECT_NAME}Targets.cmake
+      NAMESPACE ${PROJECT_NAME}::
       DESTINATION ${PJ_CMAKECONFIG_INSTALL_DIR}
     )
 
